# mondial_web_dev_demo

./: README.md  main.py  pyproject.toml
static/css/: style.css
templates/: index.html  profile.html
