[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI boilerplate with uv and Jinja2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]